# EspIdfPhotoDisplayer

./: .gitignore  .gitmodules  Readme.md  flash.sh
IDF_photodisplay/: CMakeLists.txt  sdkconfig  sdkconfig.old
IDF_photodisplay/components/XPowersLib/src/: XPowersLib.h  XPowersLibInterface.cpp  XPowersLibInterface.hpp  XPowersParams.hpp
IDF_photodisplay/components/XPowersLib/src/REG/: AXP192Constants.h  AXP202Constants.h  AXP2101Constants.h  AXP216Constants.h  SY6970Constants.h
IDF_photodisplay/components/esp_lcd_sh8601/: esp_lcd_sh8601.c
IDF_photodisplay/components/esp_lcd_sh8601/include/: esp_lcd_sh8601.h
IDF_photodisplay/components/esp_lcd_sh8601/test_apps/main/: test_esp_lcd_sh8601.c
IDF_photodisplay/main/: CMakeLists.txt  axp2101_driver.cc  axp2101_driver.h  display_sh86001.c  display_sh86001.h  idf_component.yml  image_loader.cc  image_loader.h  lvgl_panel.c  lvgl_panel.h  main.c  sdmmc_driver.c  sdmmc_driver.h
IDF_photodisplay/main/font/: FontAwesome30.c
IDF_photodisplay/tools/: batch_center_crop.py  batch_center_fit.py  smart_cut_fit.py
submodules/JPEGDEC/: CMakeLists.txt
